--- a/argocd/apps/argocd-core/kustomize/overlays/appliance/redis-nopassword.yaml
+++ b/argocd/apps/argocd-core/kustomize/overlays/appliance/redis-nopassword.yaml
@@ -2,6 +2,9 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: argocd-application-controller
+  namespace: argocd
+  labels:
+    app.kubernetes.io/name: argocd-application-controller
 spec:
   template:
     spec:
@@ -15,6 +18,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: argocd-repo-server
+  namespace: argocd
 spec:
   template:
     spec:
@@ -28,6 +32,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: argocd-redis
+  namespace: argocd
 spec:
   template:
     spec:
