--- a/argocd/apps/gitea/Application.yaml
+++ b/argocd/apps/gitea/Application.yaml
@@ -16,8 +16,8 @@ spec:
     syncOptions:
     - CreateNamespace=true
   sources:
-  - path: gitea/kustomize/overlays/appliance
-    repoURL: file:///tmp/apps
+  - path: apps/gitea/kustomize/overlays/appliance
+    repoURL: file:///tmp/argo
     targetRevision: HEAD
     kustomize:
       commonLabels:
