--- a/argocd/apps/Application.yaml
+++ b/argocd/apps/Application.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: keycloak
+  name: apps
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: keycloak
+    namespace: argocd
     server: https://kubernetes.default.svc
   project: default
   syncPolicy:
@@ -15,10 +15,11 @@ spec:
       prune: true
     syncOptions:
     - CreateNamespace=true
-  source:
-    path: apps/keycloak/kustomize/overlays/appliance
+  sources:
+  - path: apps
     repoURL: file:///tmp/argo
     targetRevision: HEAD
     kustomize:
       commonLabels:
         foo: bar
+  
