--- a/argocd/apps/gitea/kustomize/base/files/gitea.values.yaml
+++ b/argocd/apps/gitea/kustomize/base/files/gitea.values.yaml
@@ -9,10 +9,12 @@ postgresql-ha:
 
 ingress:
   enabled: true
+  apiVersion: networking.k8s.io/v1
+  className: nginx
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     cert-manager.io/cluster-issuer: ca-issuer
-    kubernetes.io/ingress.class: "nginx"
+    
     # kubernetes.io/tls-acme: "true"
   hosts:
     - host: crucible.dev
