Revert "add root certs to source control"
This reverts commit 060223b6316259ccec1d8c75b89b866df115bd1a.

--- a/argocd/install/argocd/kustomize/overlays/appliance/kustomization.yaml
+++ b/argocd/install/argocd/kustomize/overlays/appliance/kustomization.yaml
@@ -70,7 +70,29 @@ patches:
                   mountPath: /etc/ssl/certs/crucible-root-ca.crt
                   subPath: crucible-root-ca.crt
 
-
+# Controller - Appliance Root CA
+# - patch: |-
+#     - op: add
+#       path: /spec/template/spec/containers/0/volumeMounts/-
+#       value: 
+#         - name: crucible-root-ca
+#           mountPath: /etc/ssl/certs/root-ca.crt
+#           subPath: crucible-root-ca.crt
+#   target:
+#     kind: Deployment
+#     labelSelector: "app.kubernetes.io/name=argocd-application-controller"
+  
+# - patch: |-
+#     - op: add
+#       path: /spec/template/spec/volumes/-
+#       value: 
+#         - name: crucible-root-ca
+#           secret:
+#             defaultMode: 420
+#             secretName: crucible-root-ca
+#   target:
+#     kind: Deployment
+#     labelSelector: "app.kubernetes.io/name=argocd-application-controller"
 
 #Repo - Appliance Root CA
   - patch: |-
@@ -88,6 +110,41 @@ patches:
       name: appliance-argocd-repo-server
       namespace: argocd
     
+
+# - patch: |-
+
+#   target:
+#     version: v1
+#     group: apps
+#     kind: deployment
+#     name: appliance-argocd-repo-server
+    
+  
+
+# # Application - Appliance Root CA
+# - patch: |-
+#     - op: add
+#       path: /spec/template/spec/containers/0/volumeMounts
+#       value: 
+#         - name: crucible-root-ca
+#           mountPath: /etc/ssl/certs/root-ca.crt
+#           subPath: root-ca.crt
+#   target:
+#     kind: Deployment
+#     labelSelector: "app.kubernetes.io/name=argocd-server"
+
+# - patch: |-
+#     - op: add
+#       path: /spec/template/spec/volumes
+#       value: 
+#         - name: crucible-root-ca
+#           secret:
+#             defaultMode: 420
+#             secretName: root-ca
+#   target:
+#     kind: Deployment
+#     labelSelector: "app.kubernetes.io/name=argocd-server"
+  
 secretGenerator:
   - name: crucible-root-ca
     files: 
