--- a/argocd/apps/postgres/Application.yaml
+++ b/argocd/apps/postgres/Application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: postgres
   namespace: argocd
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+  - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: postgres
@@ -17,6 +17,6 @@ spec:
     - CreateNamespace=true
   source:
     path: apps/postgres/kustomize/overlays/appliance
-    repoURL: file:///tmp/argo
+    repoURL: file:///crucible-repo/crucible-appliance-argo
     targetRevision: HEAD
-    
+
