--- a/argocd/apps/topomojo/Application.yaml
+++ b/argocd/apps/topomojo/Application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: topomojo
   namespace: argocd
   finalizers:
-    - resources-finalizer.argocd.argoproj.io
+  - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: topomojo
@@ -17,6 +17,6 @@ spec:
     - CreateNamespace=true
   sources:
   - path: apps/topomojo/kustomize/overlays/appliance
-    repoURL: file:///tmp/argo
+    repoURL: file:///crucible-repo/crucible-appliance-argo
     targetRevision: HEAD
-    
+
