--- a/argocd/install/argocd/kustomize/overlays/appliance/kustomization.yaml
+++ b/argocd/install/argocd/kustomize/overlays/appliance/kustomization.yaml
@@ -3,159 +3,99 @@ kind: Kustomization
 namespace: argocd
 
 patches:
-  - patch: |-
-      apiVersion: apps/v1
-      kind: Deployment
-      metadata:
-        name: appliance-argocd-repo-server
-        namespace: argocd
-        labels:
-          app.kubernetes.io/name: argocd-repo-server
-      spec:
-        template:
-          spec:
-            volumes:
-            - name: crucible-root-ca
-              secret:
-                defaultMode: 420
-                secretName: crucible-root-ca
-            containers:
-            - name: repo-server
-              volumeMounts:
-                - name: crucible-root-ca
-                  mountPath: /etc/ssl/certs/crucible-root-ca.crt
-                  subPath: crucible-root-ca.crt
-  - patch: |-
-      apiVersion: apps/v1
-      kind: Deployment
-      metadata:
-        name: appliance-argocd-server
-        namespace: argocd
-        labels:
-          app.kubernetes.io/name: argocd-server
-      spec:
-        template:
-          spec:
-            volumes:
-            - name: crucible-root-ca
-              secret:
-                defaultMode: 420
-                secretName: crucible-root-ca
-            containers:
-            - name: server
-              volumeMounts:
-                - name: crucible-root-ca
-                  mountPath: /etc/ssl/certs/crucible-root-ca.crt
-                  subPath: crucible-root-ca.crt
-  - patch: |-
-      apiVersion: apps/v1
-      kind: Deployment
-      metadata:
-        name: appliance-argocd-applicationset-controller
-        namespace: argocd
-        labels:
-          app.kubernetes.io/name: argocd-repo-server
-      spec:
-        template:
-          spec:
-            volumes:
-            - name: crucible-root-ca
-              secret:
-                defaultMode: 420
-                secretName: crucible-root-ca
-            containers:
-            - name: applicationset-controller
-              volumeMounts:
-                - name: crucible-root-ca
-                  mountPath: /etc/ssl/certs/crucible-root-ca.crt
-                  subPath: crucible-root-ca.crt
-
-# Controller - Appliance Root CA
-# - patch: |-
-#     - op: add
-#       path: /spec/template/spec/containers/0/volumeMounts/-
-#       value: 
-#         - name: crucible-root-ca
-#           mountPath: /etc/ssl/certs/root-ca.crt
-#           subPath: crucible-root-ca.crt
-#   target:
-#     kind: Deployment
-#     labelSelector: "app.kubernetes.io/name=argocd-application-controller"
-  
-# - patch: |-
-#     - op: add
-#       path: /spec/template/spec/volumes/-
-#       value: 
-#         - name: crucible-root-ca
-#           secret:
-#             defaultMode: 420
-#             secretName: crucible-root-ca
-#   target:
-#     kind: Deployment
-#     labelSelector: "app.kubernetes.io/name=argocd-application-controller"
-
-#Repo - Appliance Root CA
-  - patch: |-
-      - op: add
-        path: /spec/template/spec/volumes/-
-        value: 
+- patch: |-
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: appliance-argocd-repo-server
+      namespace: argocd
+      labels:
+        app.kubernetes.io/name: argocd-repo-server
+    spec:
+      template:
+        spec:
+          volumes:
           - name: crucible-root-ca
             secret:
               defaultMode: 420
               secretName: crucible-root-ca
-    target:
-      version: v1
-      group: apps
-      kind: deployment
-      name: appliance-argocd-repo-server
+          - name: argocd-crucible-repo
+            persistentVolumeClaim:
+              claimName: argocd-crucible-repo
+
+          containers:
+          - name: repo-server
+            volumeMounts:
+              - name: crucible-root-ca
+                mountPath: /etc/ssl/certs/crucible-root-ca.crt
+                subPath: crucible-root-ca.crt
+              - name: argocd-crucible-repo
+                mountPath: /crucible-repo
+- patch: |-
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: appliance-argocd-server
       namespace: argocd
-    
+      labels:
+        app.kubernetes.io/name: argocd-server
+    spec:
+      template:
+        spec:
+          volumes:
+          - name: crucible-root-ca
+            secret:
+              defaultMode: 420
+              secretName: crucible-root-ca
+          containers:
+          - name: server
+            volumeMounts:
+              - name: crucible-root-ca
+                mountPath: /etc/ssl/certs/crucible-root-ca.crt
+                subPath: crucible-root-ca.crt
+- patch: |-
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: appliance-argocd-applicationset-controller
+      namespace: argocd
+      labels:
+        app.kubernetes.io/name: argocd-repo-server
+    spec:
+      template:
+        spec:
+          volumes:
+          - name: crucible-root-ca
+            secret:
+              defaultMode: 420
+              secretName: crucible-root-ca
+          containers:
+          - name: applicationset-controller
+            volumeMounts:
+              - name: crucible-root-ca
+                mountPath: /etc/ssl/certs/crucible-root-ca.crt
+                subPath: crucible-root-ca.crt
 
-# - patch: |-
+- patch: "- op: add\n  path: /spec/template/spec/volumes/-\n  value: \n    - name: crucible-root-ca\n      secret:\n        defaultMode: 420\n        secretName: crucible-root-ca"
+  target:
+    version: v1
+    group: apps
+    kind: deployment
+    name: appliance-argocd-repo-server
+    namespace: argocd
 
-#   target:
-#     version: v1
-#     group: apps
-#     kind: deployment
-#     name: appliance-argocd-repo-server
-    
-  
-
-# # Application - Appliance Root CA
-# - patch: |-
-#     - op: add
-#       path: /spec/template/spec/containers/0/volumeMounts
-#       value: 
-#         - name: crucible-root-ca
-#           mountPath: /etc/ssl/certs/root-ca.crt
-#           subPath: root-ca.crt
-#   target:
-#     kind: Deployment
-#     labelSelector: "app.kubernetes.io/name=argocd-server"
-
-# - patch: |-
-#     - op: add
-#       path: /spec/template/spec/volumes
-#       value: 
-#         - name: crucible-root-ca
-#           secret:
-#             defaultMode: 420
-#             secretName: root-ca
-#   target:
-#     kind: Deployment
-#     labelSelector: "app.kubernetes.io/name=argocd-server"
-  
 secretGenerator:
-  - name: crucible-root-ca
-    files: 
-    - crucible-root-ca.crt=files/root-ca.pem
+- name: crucible-root-ca
+  files:
+  - crucible-root-ca.crt=files/root-ca.pem
 generatorOptions:
   disableNameSuffixHash: true
-  
+
 resources:
 - ../../base
+- argocd-repo-pvc.yaml
 
-  
+
 
 
 
