--- a/argocd/apps/nginx/Application.yaml
+++ b/argocd/apps/nginx/Application.yaml
@@ -16,7 +16,7 @@ spec:
     syncOptions:
     - CreateNamespace=true
   source:
-    path: apps/nginx/kustomize/overlays/appliance
+    path: argocd/apps/nginx/kustomize/overlays/appliance
     repoURL: file:///crucible-repo/crucible-appliance-argo
-    targetRevision: HEAD
+    targetRevision: main
 
