remove moving argo repo to gitea

--- a/argocd/apps/Application.yaml
+++ b/argocd/apps/Application.yaml
@@ -17,6 +17,6 @@ spec:
   sources:
   - path: argocd/apps
     repoURL: file:///crucible-repo/crucible-appliance-argo
-    targetRevision: configure-topomojo
+    targetRevision: main
 
 
