--- a/argocd/apps/keycloak/kustomize/base/files/keycloak.values.yaml
+++ b/argocd/apps/keycloak/kustomize/base/files/keycloak.values.yaml
@@ -209,7 +209,7 @@ existingConfigmap: ""
 ## @param extraStartupArgs Extra default startup args
 ##
 extraStartupArgs: >
-  --log-level=DEBUG
+  --log-level=INFO
   --spi-theme-welcome-theme=crucible
   --spi-truststore-file-file=/opt/bitnami/keycloak/spi-certs/truststore.jks 
   --spi-truststore-file-password=password 
