quick banner mod before I forget.
squashed commits:
- downgrade keycloak plugin
- test old realm
- update plugin version
- try fortress crucible.json
- typo
- change configuration snippet to nginx
- remove nginx snippets
- start reducing keycloak values file
- increase init wait for offline reset
- update customreg with crucible.local domain.
- update crucible.json
- remove plugin
- new realm file
- update ids for admin users
- update topomojo ui
- set keycloak to import crucible realm
- missing volumeMounts in keycloak values files
- keycloak values file update
- disable keycloak built-in postgres
- update readme

--- a/argocd/apps/keycloak/kustomize/base/files/crucible.yaml
+++ b/argocd/apps/keycloak/kustomize/base/files/crucible.yaml
@@ -74,9 +74,10 @@ emailMatchAutoJoinGroup:
       - ".mil"
       - ".cert.org"
       - ".sei.cmu.edu"
+      - ".crucible.local"
 
   - description: DoD IL2 Users
     groups:
       - "/Impact Level 2 Authorized"
     domains:
-      - "@sei.cmu.edu"
+      - "@crucible.local"
