--- a/argocd/apps/topomojo/kustomize/base/files/topomojo.values.yaml
+++ b/argocd/apps/topomojo/kustomize/base/files/topomojo.values.yaml
@@ -121,7 +121,7 @@ topomojo-api:
     FileUpload__DocRoot: /mnt/tm/_docs
     # FileUpload__MaxFileBytes: 0
     Oidc__Authority: https://crucible.local/keycloak/realms/crucible
-    OpenApi__Client__ClientId: fortress_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_topomojo-api
+    OpenApi__Client__ClientId: topomojo-api
     Oidc__Audience: "topomojo-api"
     OpenApi__Client__AuthorizationUrl: https://crucible.local/keycloak/realms/crucible/protocol/openid-connect/auth
     OpenApi__Client__TokenUrl: https://crucible.local/keycloak/realms/crucible/protocol/openid-connect/token
@@ -271,18 +271,14 @@ topomojo-ui:
       "mkshost": "",
       "oidc": {
         "authority": "https://crucible.local/keycloak/realms/crucible",
-        "client_id": "fortress_00eb8904-5b88-4c68-ad67-cec0d2e07aa6_topomojo-ui",
+        "client_id": "topomojo-ui",
         "redirect_uri": "https://crucible.local/topomojo/oidc",
         "silent_redirect_uri": "https://crucible.local/topomojo/oidc-silent.html",
         "post_logout_redirect_uri": "https://crucible.local/topomojo",
         "response_type": "code",
         "scope": "openid profile topomojo-api",
-        "automaticSilentRenew": false,
-        "includeIdTokenInSilentRenew": false,
-        "filterProtocolClaims": true,
-        "loadUserInfo": true,
-        "accessTokenExpiringNotificationTime": 120,
-        "monitorSession": false,
-        "useLocalStorage": false
+        "automaticSilentRenew": true,
+        "includeIdTokenInSilentRenew": true,
+        "useLocalStorage": true
       }
     }
