--- a/argocd/apps/topomojo/kustomize/base/files/topomojo.values.yaml
+++ b/argocd/apps/topomojo/kustomize/base/files/topomojo.values.yaml
@@ -10,33 +10,8 @@ topomojo-api:
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
     tag: "2.2.6"
-
-  imagePullSecrets: []
-  nameOverride: ""
-  fullnameOverride: ""
-
   serviceAccount:
-    # Specifies whether a service account should be created
     create: true
-    # Annotations to add to the service account
-    annotations: {}
-    # The name of the service account to use.
-    # If not set and create is true, a name is generated using the fullname template
-    name: ""
-
-  podAnnotations: {}
-
-  podSecurityContext: {}
-  # fsGroup: 2000
-
-  securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
   service:
     type: ClusterIP
     port: 80
@@ -69,30 +44,12 @@ topomojo-api:
     mode: ReadWriteOnce
     class: ""
 
-  resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 200m
-  #   memory: 512Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 256Mi
-
   autoscaling:
     enabled: false
     minReplicas: 1
     maxReplicas: 10
     targetCPUUtilizationPercentage: 80
     # targetMemoryUtilizationPercentage: 80
-
-  nodeSelector: {}
-
-  tolerations: []
-
-  affinity: {}
 
   ## customStart overrides the default start process.  Files are mounted in `/start`
   customStart:
@@ -104,7 +61,38 @@ topomojo-api:
         #!/bin/sh
         cp /start/*.crt /usr/local/share/ca-certificates && update-ca-certificates
         cd /app && dotnet TopoMojo.Api.dll
-      cacert.crt: ""
+      cacert.crt: |-
+        -----BEGIN CERTIFICATE-----
+        MIIFOzCCAyOgAwIBAgIUGTOmJyKE50tjixfOVZDqHVtIB5EwDQYJKoZIhvcNAQEL
+        BQAwJTEjMCEGA1UEAwwaQ3J1Y2libGUgQXBwbGlhbmNlIFJvb3QgQ0EwHhcNMjQw
+        ODA2MTkxMDE2WhcNNDQwODAxMTkxMDE2WjAlMSMwIQYDVQQDDBpDcnVjaWJsZSBB
+        cHBsaWFuY2UgUm9vdCBDQTCCAiIwDQYJKoZIhvcNAQEBBQADggIPADCCAgoCggIB
+        AJQvkw0yQltfepBZFxoE7HFOYA0nsVE5UEAAjavN9MFdYa0LO/Po8KRuBZj+2736
+        ryrfnaMeRN8rw9u/I41S42acw62miVUBiimGRDlWq7+93F4YZNA6Lp9WKaBz+S+6
+        XoOgqv8jyhe35GJRq7UaUcUgArxTeeLN+cF57lrkRa7oF9u3Zpot5+/JTql3dm/f
+        h0zqm+YGj2ss5/Y+kb/PGonEttz4GEeXRZAlQAvxWhuIVxAo2SyyZVa9eI2hv9ge
+        0RhjgFCn1LV2gAjS489Qobrm2jBJKe0Vqby7qUsSXokDeRzHhPSiC5niMGsUGmzw
+        1qwogrG1FC6YAi9brR8ZF/OsZfQVi0dOyb6K6NwniomzlkcYcNyk0ey9ZGCR4MPw
+        xgSm2ryT0Bnw5EUf4d6g0ZAZzHls6MMZ0GhTG7Hj5e2Kr2DvaHxd3ow4T/xXgHFF
+        BgpdraYYm6Kd2QoM2iZZRW+4KnjxeYPLaVPeaxlyqXmctKBE4ola91zsTvOohb3b
+        Oo4i5XSMA8RUPkpWSfVXuSdV4kQd4NqRAKnocO/2kyab3W03q+4u+uMSx3dZAn4a
+        3JbigKPMM4RKnm/75hXdpwQ1rSsLJYzlk961oybecrPcfzodx/IO9o21hm9Bmjbj
+        O7ds3ygoZ6u68BB2/jcAptYWvxsadozs7eYU4zCaDw+9AgMBAAGjYzBhMB0GA1Ud
+        DgQWBBRpb+HpnOL2Puw2iIyacp6KWhgtAjAfBgNVHSMEGDAWgBRpb+HpnOL2Puw2
+        iIyacp6KWhgtAjAPBgNVHRMBAf8EBTADAQH/MA4GA1UdDwEB/wQEAwICpDANBgkq
+        hkiG9w0BAQsFAAOCAgEAR3oMLwg/+VRU+uao+A2rRLkJTnwkO273CN5bPScK+8QJ
+        Jx1wZqJDDP440oP6JwZc5x5aYYSlHXzaFfeV/L4vb8zLLY5qp4WuveE85PSyIpXo
+        fQ2c0R3C2RcKvxswTssV2pKFaBBHgRUlxxtgXul11u9eRPCZbvrwGzcx9awBwWpH
+        UvVwfhl+WD+rwbFV61DTKZWzBaLuBwA5gOyUboHASfHoQ7s16pboHGzsZCpIBzna
+        QPbllTqrwu7yhIQHdYkTSKV2i+BndX91wS//knE7j/kv774rN6DELdxbgR+SAgXF
+        Llht6Hv8B/jkNCgNn5uQFdwIX6lIk6ulj3CtPclBryJYQDr8MAMxTVJmk/NCPLUv
+        kUyxMTn0jD2z4Sh/BECbUOOWMrd0bfj8gLi+1bKvggtvGYQi8JCoB/5TDVW5RLzj
+        8CGV+jKztoRQP3z+CvstIbTKxCHLKfk79djdkg4JOIItHA4bBuUaMerzvDlaHTCi
+        +laxc2GLVT8pJetgOHvweOY1qi5XrBb06fuVAeGa0TtSM1a3Y+cxlcQzz87W8ZKI
+        TWO0t0Iq1Gl/i/D9vcJFQY0QfLTT9DqdUr+kNhtW3wE4WbeQBIXTVft38IwWxx41
+        apOUiTJwk2goUOaQLaNgJPONb7gY0+vSLbXbv8VLB+qacN8SVim/4CvIOguUfpg=
+        -----END CERTIFICATE-----
+
 
   # Config app settings with environment vars.
   # Those most likely needing values are listed. For others,
@@ -218,7 +206,7 @@ topomojo-ui:
       - path: /topomojo
         pathType: ImplementationSpecific
     tls:
-    - secretName: appliance-cert
+    - secretName: topomojo-tls
       hosts:
       - crucible.local
 
@@ -237,15 +225,11 @@ topomojo-ui:
   autoscaling:
     enabled: false
     minReplicas: 1
-    maxReplicas: 100
+    maxReplicas: 5
     targetCPUUtilizationPercentage: 80
-    # targetMemoryUtilizationPercentage: 80
+  
 
-  nodeSelector: {}
-
-  tolerations: []
-
-  affinity: {}
+  
 
   ## basehref is path to the app
   basehref: "/topomojo"
