--- a/argocd/apps/mkdocs/kustomize/overlays/appliance/kustomization.yaml
+++ b/argocd/apps/mkdocs/kustomize/overlays/appliance/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: <dst_namespace>
+namespace: mkdocs
 resources:
 - ../../base
 
