--- a/packer/vars.auto.pkrvars.hcl.example
+++ b/packer/vars.auto.pkrvars.hcl.example
@@ -3,5 +3,8 @@ vsphere_user = "user"
 vsphere_password = "pass"
 datacenter = "DC"
 cluster = "DC0"
+host = "DC0_H0"
 datastore = "LocalDS_0"
 network_name = "VM Network"
+ssh_username = "crucible"
+ssh_password = "crucible
