--- a/appliance.yaml.example
+++ b/appliance.yaml.example
@@ -1,9 +1,12 @@
 vars:
-  vsphere_server: 
-  vsphere_user: 
+  vsphere_server:
+  vsphere_user:
   vsphere_password:
+  vsphere_tempalte:
   datacenter:
   cluster:
   host:
   datastore:
   network_name:
+  ssh_username:
+  ssh_password:
