remove hard-coded ubuntu values for username and password

--- a/appliance.yaml.example
+++ b/appliance.yaml.example
@@ -2,7 +2,7 @@ vars:
   vsphere_server:
   vsphere_user:
   vsphere_password:
-  vsphere_tempalte:
+  vsphere_template:
   datacenter:
   cluster:
   host:
