--- a/argocd/apps/postgres/kustomize/base/files/postgres.values.yaml
+++ b/argocd/apps/postgres/kustomize/base/files/postgres.values.yaml
@@ -28,7 +28,7 @@ global:
     ## @param global.postgresql.auth.secretKeys.replicationPasswordKey Name of key in existing secret to use for PostgreSQL credentials (overrides `auth.secretKeys.replicationPasswordKey`). Only used when `global.postgresql.auth.existingSecret` is set.
     ##
     auth:
-      postgresPassword: "postgres"
+      postgresPassword: "crucible"
       username: ""
       password: ""
       database: ""
@@ -127,7 +127,7 @@ auth:
   enablePostgresUser: true
   ## @param auth.postgresPassword Password for the "postgres" admin user. Ignored if `auth.existingSecret` is provided
   ##
-  postgresPassword: "postgres"
+  postgresPassword: "crucible"
   ## @param auth.username Name for a custom user to create
   ##
   username: ""
