--- a/argocd/apps/topomojo/kustomize/base/kustomization.yaml
+++ b/argocd/apps/topomojo/kustomize/base/kustomization.yaml
@@ -1,7 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: topomojo
-secretGenerator:
+configMapGenerator:
+  - name: appliance-topomojo-api
+    files:
+    - start.sh=files/start.sh
+    - root-ca.crt=files/root-ca.pem
 generatorOptions:
   disableNameSuffixHash: true
 helmCharts:
