more CI testing

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,7 @@ jobs:
         key: ${{ runner.os }}-packer
 
     - name: Install Dependencies
-      run: brew install xmlstarlet
+      run: brew install xmlstarlet coreutils
 
     - name: Remove network config for VirtualBox 6 compatibility
       run: sed -i '' '/localhostreachable/d' packer/crucible-appliance.pkr.hcl
