adds some packages to dockerfile

--- a/.github/runners/dockerfile
+++ b/.github/runners/dockerfile
@@ -26,7 +26,7 @@ RUN apt-get update
 RUN apt-get install -y docker-ce-cli
 
 # Install the GitHub Actions Runner 
-RUN apt-get update && apt-get install -y sudo jq
+RUN apt-get update && apt-get install -y sudo jq packer make
 
 RUN useradd -m github && \
   usermod -aG sudo github && \
